--- a/src/public/style/index.css
+++ b/src/public/style/index.css
@@ -6,6 +6,11 @@
   text-decoration: none;
 }
 
+html, body {
+  width: 100dvw;
+  min-height: 100dvh;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -43,4 +48,16 @@ body {
   color: #dc2626;
 }
 
-/* end common header *//*# sourceMappingURL=index.css.map */
+/* end common header */
+.carrossel {
+  width: 70%;
+  height: 500px;
+  margin: auto;
+}
+
+.carrossel img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}/*# sourceMappingURL=index.css.map */
