--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -6,6 +6,11 @@
     text-decoration: none;
 }
 
+html,body {
+    width: 100dvw;
+    min-height: 100dvh;
+}
+
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -15,3 +20,4 @@ body {
 }
 
 @import "./header";
+@import "./carrossel";
