--- a/src/public/style/index.css
+++ b/src/public/style/index.css
@@ -13,10 +13,27 @@ html, body {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
   width: 64px;
+}
+
+.row {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+.row .container {
+  padding: 2rem;
+}
+
+.container {
+  padding: 1rem;
+  background-color: #eaeaea;
+  flex: 1;
 }
 
 /* common header */
@@ -49,6 +66,38 @@ body {
 }
 
 /* end common header */
+/* admin header */
+.header {
+  padding: 0.5rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-right: 1px solid #e0e0e0;
+}
+.header .logo {
+  align-self: center;
+}
+.header__navbar {
+  display: flex;
+  flex-direction: column;
+}
+.header__link, .header__link--active {
+  display: block;
+  width: 200px;
+  padding: 1rem;
+  font-weight: bold;
+  color: #222;
+}
+.header__link:hover, .header__link--active:hover {
+  background-color: #e4e4e4;
+  color: #dc2626;
+}
+.header__link--active {
+  color: #dc2626;
+  background-color: #e4e4e4;
+}
+
+/* end admin header */
 .carrossel {
   width: 70%;
   height: 500px;
