--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -13,10 +13,28 @@ html,body {
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 .logo {
     width: 64px;
+}
+
+.row {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+
+    .container {
+        padding: 2rem;
+    }
+}
+
+.container {
+    padding: 1rem;
+    background-color: #eaeaea;
+    flex: 1;
 }
 
 @import "./header";
