--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -1,3 +1,5 @@
+@import "./colors";
+
 * {
     margin: 0;
     padding: 0;
@@ -33,7 +35,7 @@ body {
 
 .container {
     padding: 1rem;
-    background-color: #eaeaea;
+    background-color: $bg-gray;
     flex: 1;
 }
 
