--- a/src/public/style/scss/_colors.scss
+++ b/src/public/style/scss/_colors.scss
@@ -1,6 +1,8 @@
 $primary-color: #dc2626;
+$dark-primary-color: #b91c1c;
 
 $text-color: #222;
+$text-color-light: #fff;
 
 $bg-dark-gray: #e0e0e0;
 $bg-gray: #f0f0f0;
