feat: adicionando padrões a serem usados

--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -41,3 +41,9 @@ body {
 
 @import "./header";
 @import "./carrossel";
+@import "./border";
+@import "./grid";
+@import "./flex";
+@import "./margin";
+@import "./padding";
+@import "./gap";
