repair: alterando a cor da borda

--- a/src/public/style/scss/_colors.scss
+++ b/src/public/style/scss/_colors.scss
@@ -8,7 +8,7 @@ $bg-dark-gray: #e0e0e0;
 $bg-gray: #f0f0f0;
 $bg-white: #fff;
 
-$border-gray: #e0e0e0;
+$border-gray: #c9c9c9;
 
 .bg-white {
     background-color: $bg-white;
