--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -44,6 +44,7 @@ body {
 @import "./border";
 @import "./grid";
 @import "./flex";
+@import "./table";
 @import "./margin";
 @import "./padding";
 @import "./gap";
