--- a/src/public/style/index.css
+++ b/src/public/style/index.css
@@ -47,7 +47,7 @@ body {
   justify-content: space-between;
   align-items: center;
   align-content: center;
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid #c9c9c9;
 }
 .headerCommon__navbar {
   display: flex;
@@ -73,7 +73,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border-right: 1px solid #e0e0e0;
+  border-right: 1px solid #c9c9c9;
 }
 .header .logo {
   align-self: center;
@@ -162,19 +162,19 @@ body {
 }
 
 .border {
-  border: 1px solid #e0e0e0;
+  border: 1px solid #c9c9c9;
 }
 .border-r {
-  border-right: 1px solid #e0e0e0;
+  border-right: 1px solid #c9c9c9;
 }
 .border-l {
-  border-left: 1px solid #e0e0e0;
+  border-left: 1px solid #c9c9c9;
 }
 .border-t {
-  border-top: 1px solid #e0e0e0;
+  border-top: 1px solid #c9c9c9;
 }
 .border-b {
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid #c9c9c9;
 }
 
 .col {
@@ -237,6 +237,22 @@ body {
 .flex-col {
   display: flex;
   flex-direction: column;
+}
+
+table {
+  border-radius: 0.5rem;
+  border: 1px solid #c9c9c9;
+  border-collapse: separate;
+  border-spacing: 0;
+  text-align: left;
+}
+
+th, td {
+  padding: 1rem 1.5rem;
+}
+
+tr:nth-child(even) {
+  background-color: #f0f0f0;
 }
 
 .m-0 {
