--- a/src/public/style/index.css
+++ b/src/public/style/index.css
@@ -113,7 +113,7 @@ body {
 }
 .dropdown--content {
   display: none;
-  background-color: #fff;
+  background-color: #f0f0f0;
   transition: all 0.2s ease-in-out;
 }
 .dropdown:hover .dropdown--content {
@@ -123,7 +123,7 @@ body {
   transition: all 0.2s ease-in-out;
 }
 .dropdown:hover .dropdown--content *:hover {
-  background-color: #fff;
+  background-color: #f0f0f0;
   color: #dc2626;
   border-left: 0.75rem solid #dc2626;
 }
