feat: adicionando cor secondaria

--- a/src/public/style/scss/_colors.scss
+++ b/src/public/style/scss/_colors.scss
@@ -1,5 +1,7 @@
 $primary-color: #dc2626;
 $dark-primary-color: #b91c1c;
+$secondary-color: #2595DB;
+$dark-secondary-color: #1C7DBA;
 
 $text-color: #222;
 $text-color-light: #fff;
