feat: adicionando estilo de botao

--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -41,6 +41,7 @@ body {
 
 @import "./header";
 @import "./dropdown";
+@import "./button";
 @import "./carrossel";
 @import "./border";
 @import "./grid";
