--- a/src/public/style/index.css
+++ b/src/public/style/index.css
@@ -128,6 +128,59 @@ body {
   border-left: 0.75rem solid #dc2626;
 }
 
+.btn, .btn--secondary-outline, .btn--secondary, .btn--primary-outline, .btn--primary {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  text-align: center;
+  font-size: medium;
+  font-weight: bold;
+  color: #222;
+  background-color: #f0f0f0;
+  border: 1px solid #222;
+  border-radius: 0.25rem;
+  transition: all 0.2s ease;
+}
+.btn:hover, .btn--secondary-outline:hover, .btn--secondary:hover, .btn--primary-outline:hover, .btn--primary:hover {
+  background-color: #e0e0e0;
+}
+.btn--primary {
+  background-color: #dc2626;
+  border-color: #b91c1c;
+  color: #fff;
+}
+.btn--primary:hover {
+  background-color: #b91c1c;
+}
+.btn--primary-outline {
+  background-color: #fff;
+  border-color: #dc2626;
+  border-width: 2px;
+  color: #dc2626;
+}
+.btn--primary-outline:hover {
+  background-color: #dc2626;
+  color: #fff;
+}
+.btn--secondary {
+  background-color: #2595DB;
+  border-color: #1C7DBA;
+  color: #fff;
+}
+.btn--secondary:hover {
+  background-color: #1C7DBA;
+}
+.btn--secondary-outline {
+  background-color: #fff;
+  border-color: #2595DB;
+  border-width: 2px;
+  color: #2595DB;
+}
+.btn--secondary-outline:hover {
+  background-color: #2595DB;
+  color: #fff;
+}
+
 .carrossel {
   width: 70%;
   height: 500px;
