feat: adicionando mais cores de borda e background (fundo preto e borda preta e branca)

--- a/src/public/style/scss/_colors.scss
+++ b/src/public/style/scss/_colors.scss
@@ -9,8 +9,11 @@ $text-color-light: #fff;
 $bg-dark-gray: #e0e0e0;
 $bg-gray: #f0f0f0;
 $bg-white: #fff;
+$bg-dark: #222;
 
 $border-gray: #c9c9c9;
+$border-dark: #222;
+$border-white: #fff;
 
 .bg-white {
     background-color: $bg-white;
