feat: adicionando padroes de estilo aos formularios

--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -42,6 +42,7 @@ body {
 @import "./header";
 @import "./dropdown";
 @import "./button";
+@import "./form";
 @import "./carrossel";
 @import "./border";
 @import "./grid";
