--- a/src/public/style/scss/_flex.scss
+++ b/src/public/style/scss/_flex.scss
@@ -7,3 +7,11 @@
     display: flex;
     flex-direction: column;
 }
+
+.justify-center {
+    justify-content: center;
+}
+
+.items-center {
+    align-items: center;
+}
