--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -48,6 +48,7 @@ body {
 @import "./grid";
 @import "./flex";
 @import "./table";
+@import "./text";
 @import "./margin";
 @import "./padding";
 @import "./gap";
