feat: criando o sistema que lista os funcionarios, com paginacao

--- a/src/public/style/scss/index.scss
+++ b/src/public/style/scss/index.scss
@@ -41,6 +41,7 @@ body {
 
 @import "./header";
 @import "./dropdown";
+@import "./pagination";
 @import "./button";
 @import "./form";
 @import "./carrossel";
