--- a/src/public/style/index.css
+++ b/src/public/style/index.css
@@ -132,6 +132,34 @@ body {
   border: none;
 }
 
+.pagination__table {
+  float: inline-end;
+}
+.pagination__table td {
+  border-left: 1px solid #c9c9c9;
+  padding: 0;
+}
+.pagination__table td:first-child {
+  border-left: none;
+}
+.pagination__link, .pagination__link--active {
+  padding: 0.75rem 1rem;
+  display: grid;
+  place-content: center;
+  color: #222;
+}
+.pagination__link:hover, .pagination__link--active:hover {
+  background-color: #f0f0f0;
+}
+.pagination__link--active {
+  background-color: #222;
+  color: #fff;
+  font-weight: bold;
+}
+.pagination__link--active:hover {
+  background-color: #222;
+}
+
 .btn, .btn--secondary-outline, .btn--secondary, .btn--primary-outline, .btn--primary {
   display: inline-block;
   padding: 0.5rem 1rem;
@@ -406,6 +434,7 @@ table {
   border-collapse: separate;
   border-spacing: 0;
   text-align: left;
+  overflow: hidden;
 }
 
 th, td {
