--- a/src/public/style/index.css
+++ b/src/public/style/index.css
@@ -142,6 +142,13 @@ body {
 .pagination__table td:first-child {
   border-left: none;
 }
+.pagination__dots {
+  padding: 0.75rem 1rem;
+  display: grid;
+  place-content: center;
+  color: #222;
+  cursor: default;
+}
 .pagination__link, .pagination__link--active {
   padding: 0.75rem 1rem;
   display: grid;
